fix: black text outside of dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,7 @@ body {
   font-family: "nasalizationReg", sans-serif;
   font-size: 16px;
   line-height: 1;
+  color: #fff;
 }
 
 h1 {
@@ -82,41 +83,6 @@ a.btn:hover {
     text-wrap: balance;
   }
 }
-
-/* @keyframes jiggle {
-  0%,
-  100% {
-    transform: rotate(0deg);
-  }
-  25% {
-    transform: rotate(3deg);
-  }
-  50% {
-    transform: rotate(-3deg);
-  }
-  75% {
-    transform: rotate(3deg);
-  }
-} */
-
-/* @keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-.fade-in {
-  animation: fadeIn 1s ease-in forwards;
-}
-
-.fade-in-left {
-  opacity: 0;
-  transform: translateX(-100%);
-  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-} */
 
 .fade-in-left.active {
   opacity: 1;
